# NavTypes

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: automated-testing.yml
include/: DirectionCosinesMatrix.hpp  Matrix.hpp  Quaternion.hpp
test/: DirectionCosinesMatrixTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  testMain.cpp
